# celeste

./: .eslintignore  .eslintrc.cjs  .gitignore  .prettierrc.json  .yarnrc.yml  index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
src/: App.tsx  main.tsx  style.scss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/window-titlebar/: index.tsx  style.module.scss
